--- a/contacto.css
+++ b/contacto.css
@@ -58,7 +58,9 @@
     color: black;
 }
 
+
 @media screen and (max-width: 700px) {
+       
         .main form .sobre{
             width: 0%;
         }   
@@ -89,6 +91,21 @@
         }
         
 }
+@media screen and (min-width: 800px) {
+    .main{
+         min-height: 350px;
+    }
+   
+    
+}
+@media screen and (min-width: 700px) {
+    .main{
+        min-height: 800px;
+    }
+    
+
+}
+
 
 
 
