--- a/estilo.css
+++ b/estilo.css
@@ -17,7 +17,7 @@ html{
 .header {
     padding:1rem;
     text-align: center;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size:1.5rem;
     background-color: #ffc716;
     letter-spacing: 1rem;
@@ -159,16 +159,20 @@ html{
 }
 /*footer*/ 
 footer {
-    padding: 20px;
+    padding:1rem;
     text-align: center;
-    background:#ffc716;
-    color:rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
+    font-size:1rem;
+    background-color: #ffc716;
+    letter-spacing: 0.2rem;
 }
 footer .contacto a{
+    
     text-decoration: none;
     color:rgb(0, 0, 0);
 }
 footer .redes-sociales a{
+   
     text-decoration: none;
     font-weight:bolder;
     color:rgb(0, 0, 0);
@@ -217,6 +221,7 @@ footer .redes-sociales a{
     
     footer {
         font-size:1.2rem;
+       
     } 
     .side .fakeimg2 {
          margin:auto;      
@@ -226,7 +231,7 @@ footer .redes-sociales a{
     .header {
         padding:1rem;
         text-align: center;
-        color: white;
+  
         font-size:1.3rem;;
     }
     .barra {
@@ -288,11 +293,13 @@ footer .redes-sociales a{
         cursor:pointer;
         width: 100%;
     }
+    
 }
 @media only screen and (min-width: 1200px) {
    
     .row, .barra{   
         flex-direction: row;
+        
     }
     .side {
         font-size:1.2rem;
@@ -309,7 +316,7 @@ footer .redes-sociales a{
         margin-top:6rem;
     }
     .imagen-destacados{
-        height:400px;
+        max-height:780px;
         background-color:none;
         background-size:contain;
         font-size:1rem; 
@@ -320,8 +327,6 @@ footer .redes-sociales a{
        font-size:1.2rem;
        width:100%;
     }
-    footer {
-        font-size:1.2rem;
-    }   
+  
 } 
  
